--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,25 +1,25 @@
-#spring:
-#  datasource:
-#    url: jdbc:h2:tcp://localhost/~/test-mutsa # 메모리 내 데이터베이스 URL
-#    driver-class-name: org.h2.Driver # H2 드라이버 클래스
-#    username: sa # 기본 사용자 이름
-#    password: # 기본 비밀번호
-##  h2:
-##    console:
-##      enabled: true # H2 콘솔을 활성화합니다.
-##      path: /h2-console # H2 콘솔의 접근 경로
-##  jpa:
-##    hibernate:
-##      ddl-auto: update # Hibernate의 DDL 자동 생성 전략 (update, create, create-drop 등)
-##    properties:
-##      hibernate:
-##        format_sql: true
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${database-host}:3306/${database-name}
-    username: ${database-username}
-    password: ${database-password}
+    url: jdbc:h2:tcp://localhost/~/test-mutsa # 메모리 내 데이터베이스 URL
+    driver-class-name: org.h2.Driver # H2 드라이버 클래스
+    username: sa # 기본 사용자 이름
+    password: # 기본 비밀번호
+  h2:
+    console:
+      enabled: true # H2 콘솔을 활성화합니다.
+      path: /h2-console # H2 콘솔의 접근 경로
+#  jpa:
+#    hibernate:
+#      ddl-auto: update # Hibernate의 DDL 자동 생성 전략 (update, create, create-drop 등)
+#    properties:
+#      hibernate:
+#        format_sql: true
+#spring:
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://${database-host}:3306/${database-name}
+#    username: ${database-username}
+#    password: ${database-password}
 
   jpa:
     show-sql: true
@@ -36,3 +36,15 @@ spring:
   sql:
     init:
       mode: always # 애플리케이션 시작 시 스크립트 초기화 (기본값: embedded)
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${client-id}
+            client-secret: ${client-secret}
+            scope:
+              - email
+              - profile
+            redirect-uri: "http://localhost:8080/login/oauth2/code/google"
